traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:15: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:18: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:21: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:24: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:27: error: Unmatched closing brace '}' ignored here
}
^